# astra

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  GITEA_ACTIONS.md  LICENSE  PACKAGE_CLEANUP.md  PTERODACTYL.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEAM_ASSIGNMENTS.md  egg-astra.json  pyproject.toml
.gitea/workflows/: docker-build.yml  test.yml
.github/workflows/: docker-build.yml
assets/cards/: PLACEHOLDER_INFO.md  generate_placeholders.py
assets/cover_art/: COVER_ART_VARIANTS.md
docs/: RIDER_WAITE_PROGRESS.md  RIDER_WAITE_TASKS.md  RWS_TEST_ENVIRONMENT.md  RWS_TEST_PLAN.md
scripts/: verify_rws_images.py
src/astra/: __init__.py  __main__.py  bot.py  embeds.py  journal.py  journal_commands.py  reading.py  theme_commands.py  theme_embeds.py  themes.py
src/astra/data/: __init__.py  cards.py  spreads.py
tests/: __init__.py  conftest.py  test_bot.py  test_cards.py  test_integration.py  test_rws_integration.py  test_spreads.py  test_themes.py
themes/: THEME_GUIDE.md
themes/classic/: theme.json
themes/default/: theme.json
